chore: :wrench: Add isContainer and update controls
Signed-off-by: Javier J. Salmerón García <javier.salmeron@broadcom.com>

--- a/photon/5.0/v2r1-srg/inspec/vmware-photon-5.0-stig-baseline/inspec.yml
+++ b/photon/5.0/v2r1-srg/inspec/vmware-photon-5.0-stig-baseline/inspec.yml
@@ -20,6 +20,10 @@ inputs:
   type: boolean
   description: Used to indicate if system is a container host and running Kubernetes/Docker/etc for controls where this would make them N/A
   value: false
+- name: isContainer
+  type: boolean
+  description: Used to indicate if system is a container for controls where this would make them N/A
+  value: false
 - name: sshdcommand
   type: string
   value: 'sshd -T'
