feat: :sparkles: Add minimal container support
Signed-off-by: Javier J. Salmerón García <javier.salmeron@broadcom.com>

--- a/photon/5.0/v2r1-srg/inspec/vmware-photon-5.0-stig-baseline/inputs-example-minimal-container.yml
+++ b/photon/5.0/v2r1-srg/inspec/vmware-photon-5.0-stig-baseline/inputs-example-minimal-container.yml
@@ -1,5 +1,5 @@
 useFaillockConf: true
 usePwqualityConf: true
 sshdcommand: 'sshd -T'
-authprivlog: /var/log/messages
-containerHost: true
+isContainer: true
+isMinimalContainer: true
